[gd_scene load_steps=8 format=3 uid="uid://c8x8x8x8x8x8"]

[ext_resource type="Script" uid="uid://qo24tx5xne8m" path="res://src/scripts/controller/scenes/World.gd" id="1_0x8x8"]
[ext_resource type="PackedScene" uid="uid://d8x8x8x8x8x8" path="res://src/scenes/Player.tscn" id="2_0x8x8"]
[ext_resource type="Script" uid="uid://vgqkhb2354ab" path="res://src/scripts/controller/enemy/EnemyManager.gd" id="3_0x8x8"]
[ext_resource type="Script" uid="uid://1xetfs1cn31v" path="res://src/scripts/controller/loot/LootManager.gd" id="4_0x8x8"]
[ext_resource type="Script" uid="uid://judeftwsvbjw" path="res://src/scripts/controller/loot/ProjectileManager.gd" id="5_0x8x8"]
[ext_resource type="Script" uid="uid://bnh55n53tdbyr" path="res://src/scripts/view/misc/FxManager.gd" id="6_0x8x8"]
[ext_resource type="Script" uid="uid://0nf0pnacimsj" path="res://src/scripts/controller/world/WorldMap.gd" id="7_worldmap"]

[node name="World" type="Node2D"]
script = ExtResource("1_0x8x8")

[node name="WorldMap" type="Node2D" parent="."]
script = ExtResource("7_worldmap")

[node name="Player" parent="." instance=ExtResource("2_0x8x8")]

[node name="EnemyManager" type="Node" parent="."]
script = ExtResource("3_0x8x8")

[node name="LootManager" type="Node" parent="."]
script = ExtResource("4_0x8x8")

[node name="ProjectileManager" type="Node" parent="."]
script = ExtResource("5_0x8x8")

[node name="FxManager" type="Node" parent="."]
script = ExtResource("6_0x8x8")

[node name="Camera2D" type="Camera2D" parent="."]
